--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,19 +9,20 @@ body{
 .container{
     display: flex;
     color: #fff;
-    background-color: pink;
+    background-image: url(../images/bg-repeat.jpg);
     width: 1000px;
     height: 500px;
     border-radius: 20px;
     padding: 40px;
     gap: 18px;
+    justify-content: center;
 }
 
 .container .informations{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 500px;
+    width: min(30rem, 60%);
 }
 
 .container .informations .title{
@@ -34,7 +35,66 @@ body{
     font-size: 15px;
 }
 
-.container .form{
+
+.container .formulario{
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: min(40rem, 40%);
+    align-items: center;
+    padding: 20px;
+}
+
+.container .formulario .input-usuario{
+    width: 100%;
+}
+
+.container .formulario .input-usuario input{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    height: 30px;
+    padding: 8px;
+}
+
+
+.container .formulario .input-usuario textarea{
+    width: 100%;
+    border: 1px solid black;
+    padding: 8px;
+    resize: none;
+}
+
+.container .formulario .btn{
+    border: 1px solid;
+    background-color: #3ccc87;
+    color: #fff;
+    height: 90px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.valido{
+    border: 1px solid #3ccc87;
+}
+
+.erro{
+    border: 1px solid red;
+}
+
+.mostrar{
+    color: red;
+    font-size: 10px;
+}
+
+
+
+
+
+
+/* .container .form{
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -124,4 +184,4 @@ body{
     display: block;
     color: red;
     font-size: 10px;
-}
+} */
